fixed spacing in training

--- a/src/components/frontpagecomponents/Training.module.css
+++ b/src/components/frontpagecomponents/Training.module.css
@@ -53,7 +53,7 @@
   transition: all 0.5s;
 }
 .training_main_list_item:not(:last-child) {
-  margin-bottom: 6rem;
+  margin-bottom: 3rem;
 }
 
 .training_point_detail_cont {
